<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Tabs -->
    <string name="title_section1">Services</string>
    <string name="title_section2">Personal Data</string>
    <string name="title_section3">Conversations</string>

    <!-- Titles -->
    <string name="app_name">Car Service</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_guest">Guest</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_new_service">New Service</string>

    <!--Register form-->

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="men_gender">Men</string>
    <string name="women_genre">Women</string>
    <string name="birthdate">Birthdate</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_error">Please enter valid e-mail</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="error">Please enter</string>

    <string name="btn_own_car">Your cars</string>
    <string name="btn_own_services">Your services</string>

    <!-- Login form -->
    <string name="remember_pass">Remember password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_guest">Guest</string>
    <string name="alert_check_connection">Check your internet connection</string>
    <string name="alert_connection_problem">Problem with your connection</string>
    <string name="alert_no_services">No services resisted in system</string>
    <string name="alert_no_cars">You don\'t have added cars. But you can add one</string>
    <string name="loading_services">Loading list of services…</string>

    <!-- Service register -->
    <string name="name">Service name</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="image">Service Photo</string>
    <string name="add_photo">Add Photo</string>
    <string-array name="image_dialog">
        <item>Take Photo</item>
        <item>Choose from Library</item>
        <item>Cancel</item>
    </string-array>

    <!-- service item -->
    <string name="average_rating">Average rating:</string>
    <string name="loading_personal_data">Loading personal data…</string>
    <string name="update_personal_data">Updating personal data…</string>
    <string name="contact">Contact:</string>
    <string name="phone">Phone:</string>
    <string name="email">E-mail:</string>
    <string name="loading_service_details">Loading service details…</string>
    <string name="rate_not_allowed">You can not rate your service</string>
    <string name="rate_success">Service was successfully rated!</string>
    <string name="loading_cars">Loading list of cars…</string>

    <!-- add car -->
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="reg_number">Registration number</string>
    <string name="engine">Engine</string>
    <string name="mileage">Mileage</string>
    <string name="color">Color</string>
    <string name="fuel">Fuel</string>
    <string name="year">Year</string>
    <string name="btn_add_car">Add car</string>
    <string name="btn_save">Save</string>

    <string name="btn_delete">Delete car</string>
    <string name="update_car_info">Updating car info…</string>
    <string name="loading_car_info">Loading car info…</string>
    <string name="deleting_car">Deleting car…</string>
    <string name="loading_service_info">Loading service info…</string>
    <string name="deleting_service">Deleting service…</string>

    <!--Contact to service-->
    <string name="contact_to_service_title">Contact to this service</string>
    <string name="your_message_title">Your message:</string>
    <string name="attachment_title">Attachment:</string>
    <string name="content_description_add">Add attachment</string>
    <string name="content_description_remove">Remove attachment</string>
    <string name="btn_send">Send</string>
    <string name="contact_not_allowed">You can not contact your service</string>
    <string name="message"> a message</string>
    <string name="op_failed">Operation failed</string>
    <string name="sending_message">Sending…</string>
    <string name="rating_service">Rating…</string>
    <string name="loading_conversation_list">Loading conversation list…</string>
    <string name="alert_no_conversations">No conversations started!</string>
    <string name="loading_conversation">Loading conversation…</string>

</resources>
