<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/make" />

        <EditText
            android:id="@+id/make"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/make"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/model" />

        <EditText
            android:id="@+id/model"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/model"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_number" />

        <EditText
            android:id="@+id/regNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/reg_number"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine" />

        <EditText
            android:id="@+id/engine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/engine"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mileage" />

        <EditText
            android:id="@+id/mileage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/mileage"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <EditText
            android:id="@+id/color"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/color"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel" />

        <EditText
            android:id="@+id/fuel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/fuel"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <EditText
            android:id="@+id/year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/year"
            android:inputType="number"
            android:singleLine="true" />

        <Button
            android:id="@+id/save_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_delete" />
    </LinearLayout>
</ScrollView>
