<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:fillViewport="true"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/serviceImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/serviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceImage"
            android:layout_centerHorizontal="true"
            android:gravity="center" />

        <RelativeLayout
            android:id="@+id/ratingBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceName">

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:text="@string/rating" />

            <RatingBar
                android:id="@+id/serviceRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.5"
                android:layout_toRightOf="@id/ratingText" />

        </RelativeLayout>


        <TextView
            android:id="@+id/serviceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBlock" />

        <TextView
            android:id="@+id/contactBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceDescription"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/serviceCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactBlock" />

        <TextView
            android:id="@+id/serviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceCity"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceAddress"
            android:layout_marginRight="2dp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/servicePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceAddress"
            android:layout_toRightOf="@id/phone" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginRight="2dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/serviceEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_toRightOf="@id/email" />

    </RelativeLayout>

</ScrollView>